[package]
name = "tvm_executor"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
thiserror.workspace = true
#
tvm_block.workspace = true
tvm_types.workspace = true
tvm_vm.workspace = true

[features]
signature_with_id = ["tvm_block/signature_with_id", "tvm_vm/signature_with_id"]

[lib]
bench = false
