[package]
name = "tvm_sdk"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tvm_abi.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

api_derive = { path = "../api/derive" }
api_info = { path = "../api/info" }

anyhow = "1.0.79"
base64 = "0.21.7"
chrono = "0.4.34"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.18"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
thiserror = "1.0.56"
