[package]
name = "tvm_sdk"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tvm_abi.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

api_derive = { path = "../api/derive" }
api_info = { path = "../api/info" }
