[package]
name = "vrgrth"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tvm_block.workspace = true
tvm_types.workspace = true
tvm_assembler.workspace = true
tvm_vm.workspace = true

libloading = '0.6'
log4rs = '1.2'
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.11' }
pretty_assertions = '1.3'
criterion = '0.4'



ed25519 = '1.2'
ed25519-dalek = '1.0'
anyhow = "1.0.79"
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.7'
diffy = { optional = true, version = '0.2.2' }
similar = { features = [ 'bytes' ], optional = true, version = '2.2.0' }
zstd = { default-features = false, optional = true, version = '0.11' }
fastcrypto-zkp = "0.1.3"
fastcrypto = "0.1.8"
ark-std = "0.4.0"

base64ct ={ version = "1.5.3", features = ["alloc"]}

base64 = "0.13"

serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_repr = "0.1.18"

[lints]
workspace = true
