[package]
name = "tvm_tests"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tvm_block.workspace = true
tvm_types.workspace = true
tvm_assembler = {workspace = true, features = ['gosh']}
tvm_vm = {workspace = true, features = ['gosh']}

num-bigint.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_derive.workspace = true
num-traits.workspace = true
hex.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
ed25519.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
diffy.workspace = true
zstd.workspace = true
similar.workspace = true

base64 = "0.13"
libloading = '0.6'
log4rs = '1.2'
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.11' }
pretty_assertions = '1.3'
criterion = '0.4'
fastcrypto-zkp = "0.1.3"
fastcrypto = "0.1.8"
ark-std = "0.4.0"
ark-ff = "0.4.2"
base64ct ={ version = "1.5.3", features = ["alloc"]}

[lints]
workspace = true
