[package]
name = "tvm_tl_codegen"
description = "Code generator for TL-schema"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
failure.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_derive.workspace = true

crc = "1.8"
pom = "1.1"
syn = "2.0.48"

[features]
default = ["reformat"]
reformat = []
