[package]
name = "tvm_types"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-ctr = "0.6.0"
base64.workspace = true
blst = { workspace = true, features = ["portable"] }
crc.workspace = true
curve25519-dalek = "4.1.1"
ed25519.workspace = true
ed25519-dalek = { workspace = true, features = ["hazmat", "rand_core"] }
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
lockfree.workspace = true
log.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
sha2.workspace = true
smallvec = { features = ["const_new", "union", "write"], version = "1.13.1" }
thiserror.workspace = true
x25519-dalek = "2.0.0"
parking_lot = { version = "0.12.4" }
fastbloom = "0.14.0"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.14.0", default-features = false, features = [
  "criterion",
  "flamegraph",
] }

[features]
export_key = []

[[bench]]
harness = false
name = "benchmarks"

[lib]
bench = false
