[package]
name = "tvm_types"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
ctr = "0.9"
base64.workspace = true
crc.workspace = true
curve25519-dalek = "4"
ed25519.workspace = true
ed25519-dalek = { workspace = true, features = ["hazmat", "rand_core"] }
anyhow.workspace = true
hex.workspace = true
lazy_static.workspace = true
lockfree.workspace = true
log.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
sha2.workspace = true
smallvec = { workspace = true, features = ["const_new", "union", "write"] }
thiserror.workspace = true
x25519-dalek = "2"
parking_lot = "0.12"
fastbloom = { default-features = false, features = ["std"], version = "0.17" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blst = { workspace = true, features = ["portable"] }

[dev-dependencies]
criterion.workspace = true
pprof = { version = "0.14", default-features = false, features = [
  "criterion",
  "flamegraph",
] }

[features]
export_key = []

[[bench]]
harness = false
name = "benchmarks"

[lib]
bench = false
