[package]
name = "tvm_vm"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blst.workspace = true
chrono.workspace = true
diffy = { optional = true, version = "0.3.0" }
ed25519.workspace = true
ed25519-dalek.workspace = true
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
rand.workspace = true
serde_derive.workspace = true
similar = { features = ["bytes"], optional = true, workspace = true }
thiserror.workspace = true
zstd = { default-features = false, optional = true, workspace = true }

tokio.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true
tvm_abi.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
semver.workspace = true
serde.workspace = true

regex.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }


bls12_381 = "0.8"

base64 = "0.13"


ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.1" }
ark-ff = { version = "0.4.1", features = ["asm"] }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
byte-slice-cast = "1.2.2"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "prf"] }
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"

fastcrypto = "0.1.8"
neptune = { version = "13.0.0", default-features = false }

once_cell = "1.16"
schemars = "0.8.10"

derive_more = "0.99.16"
base64ct = { version = "1.5.3", features = ["alloc"] }

itertools = "0.12.0"
typenum = "1.13.0"
tracing = "0.1.41"

ff = { version = "0.13.0", features = ["derive"] }

rand_chacha = "0.2.2"

# [target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown", target_vendor = "unknown")))'.dependencies]
#wasmtime.workspace = true
#wasmtime-wasi.workspace = true
#wasmtime-wasi-io.workspace = true


[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.1"
log4rs = "1.2.0"
pprof = { features = ["criterion", "flamegraph"], version = "0.13.0" }
pretty_assertions = "1.4.0"


[features]
default = ["gosh"]
fift_check = []
gosh = ["tvm_block/gosh", "diffy", "similar", "zstd"]
log_file = []
signature_no_check = []
signature_with_id = ["tvm_block/signature_with_id"]
verbose = []
ci_run = []
wasm_external = []

[[bench]]
harness = false
name = "benchmarks"

[lib]
bench = false
