[package]
name = "tvm_vm"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blst.workspace = true
chrono.workspace = true
diffy = { optional = true, version = "0.3.0" }
ed25519.workspace = true
ed25519-dalek.workspace = true
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
rand.workspace = true
serde_derive.workspace = true
similar = { features = ["bytes"], optional = true, workspace = true }
thiserror.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-io = { workspace = true, optional = true }
zstd = { optional = true, workspace = true }

tokio.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true
tvm_abi.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
semver.workspace = true
serde.workspace = true

regex.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }


bls12_381 = "0.8"

base64 = "0.13"


ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.1" }
ark-ff = { version = "0.4.1", features = ["asm"] }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
byte-slice-cast = "1.2.2"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "prf"] }
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"

halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", branch = "develop", default-features=false, features=["halo2-pse","display"] }

halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }
halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", branch = "develop", default-features=false, features=["halo2-pse","display"] }
gosh_dark_dex_halo2_circuit = { git = 'https://github.com/gosh-sh/gosh_dark_dex_halo2_circuit.git', rev="fccaa0ba96bb2c5556efd760f5416479bce629b3"}


fastcrypto = "0.1.8"
neptune = { version = "13.0.0", default-features = false }

once_cell = "1.16"
schemars = "0.8.10"

derive_more = "0.99.16"
base64ct = { version = "1.5.3", features = ["alloc"] }

itertools = "0.12.0"
typenum = "1.13.0"
tracing = "0.1.41"

ff = { version = "0.13.0", features = ["derive"] }

rand_chacha = "0.2.2"




[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.1"
log4rs = "1.2.0"
pprof = { features = ["criterion", "flamegraph"], version = "0.13.0" }
pretty_assertions = "1.4.0"

[features]
default = ["gosh"]
fift_check = []
wasmtime = ["wasmtime/std", "wasmtime-wasi", "wasmtime-wasi-io"]
gosh = ["tvm_block/gosh", "diffy", "similar", "zstd"]
log_file = []
signature_no_check = []
signature_with_id = ["tvm_block/signature_with_id"]
verbose = []
ci_run = []
wasm_web = []                                                    # browser compatible wasm
wasm_external = []

[[bench]]
harness = false
name = "benchmarks"

[lib]
bench = false

[patch.crates-io]

halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }

[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }



