[package]
name = "api_test"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api_derive = { path = "../derive" }
api_info = { path = "../info" }
serde.workspace = true
# serde_derive.workspace = true
serde_json.workspace = true

[lib]
name = "api_test"
