[package]
name = "tl_code_gen"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
tvm_tl_codegen = { path = "../../tvm_tl_codegen", default-features = false, features = [
    "reformat",
] }
