[package]
name = "update_trusted_blocks"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
#
tvm_client = { path = "../../tvm_client" }
tvm_types.workspace = true
