[package]
authors = [
    "Aaron Gallagher <_@habnab.it>",
    "Connie Hilarides <connorcpu@live.com>",
    "Denis K. <denis.k@tonlabs.io>",
    "Alexey Vavilin <alexey.v@tonlabs.io",
    "Sergei Blinov <sergei.b@gosh.sh>",
]
description = "Code generator for TL-schema"
edition = "2021"
name = "tvm_tl_codegen"
version = "0.1.0"

[dependencies]
crc = "1.8"
pom = "1.1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = "1.0.196"
serde_derive = "1.0.196"
syn = "2.0.48"

[features]
default = ["reformat"]
reformat = []
