[package]
name = "add"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:adder"

[package.metadata.component.dependencies]
