#for proper wasm compilation in same workspace:
cargo-features = ["per-package-target"]

[package]
name = "wasm_programs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
forced-target = "wasm32-wasip2"

[dependencies]
wasm-bindgen = "0.2.100"

[lints]
workspace = true

