[package]
name = "wasm_test_cmd"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[package.metadata.component]
package = "component:wasm-test-cmd"

[package.metadata.component.dependencies]

[lints]
workspace = true
